# derperview

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  ReadMe.md  build_and_install.sh  derperview.sln  derperview.vcxproj  version.cpp.in
ci-scripts/: build_and_install.sh  download-ffmpeg-windows.sh  package-windows.sh
etc/: download-opencl-windows.sh  download-wxwidgets-windows.sh
include/: Video.hpp  libderperview.hpp  version.hpp
src/: CMakeLists.txt  Main.cpp  Process.cpp  Process.hpp  Resource.rc  Video.cpp  Video.hpp
src/derperview/: CMakeLists.txt  Main.cpp
src/derperview-wx/: CMakeLists.txt  Main.cpp  ProgressDialog.cpp  ProgressDialog.hpp  WorkerThread.cpp  WorkerThread.hpp  derperview-wx.hpp
src/libderperview/: CMakeLists.txt  Entry.cpp  GpuProcess.cpp  GpuProcess.hpp  Process.cpp  Process.hpp  Video.cpp  Video.hpp
